chore: timestamp on models
